--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,12 +1,20 @@
-version: "3.6"
+version: '3.1'
 
 services:
-  db:
-    image: mysql:latest
-    command: --default-authentication-plugin=mysql_native_password
+
+  mongo:
+    image: mongo
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+
+  mongo-express:
+    image: mongo-express
     restart: always
     ports:
-      - 3306:3306
+      - 8081:8081
     environment:
-      - MYSQL_DATABASE=test
-      - MYSQL_ROOT_PASSWORD=password
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: password
+      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
