--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,9 @@
     "@nestjs/mapped-types": "^1.1.0",
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.1.2",
     "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/websockets": "^9.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "mongoose": "^6.6.1",
